--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@angular/platform-browser": "7.2.0",
     "@angular/platform-browser-dynamic": "7.2.0",
     "@angular/router": "7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "2.0.0",
-    "bootstrap": "4.1.2",
+    "@ng-bootstrap/ng-bootstrap": ">=4.1.2",
+    "bootstrap": ">=4.3.1",
     "core-js": "2.4.1",
-    "jquery": "3.2.1",
+    "jquery": ">=3.4.0",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
     "nouislider": "9.2.0",
